fastmetrics-derive/tests/ui/fail/label_set/exclusive_attr_conflicts.rs
use fastmetrics_derive::LabelSet;

#[derive(LabelSet)]
struct Labels {
    #[label(skip, rename = "value")]
    value: u64,
}

fn main() {}
